# dmm-python

./: .gitignore  LICENSE  README.ja.md  README.md  README.zh-Hant.md  Taskfile.yaml  pyproject.toml
docs/: README.ja.md  README.md  README.zh-Hant.md  field-reference.ja.md  field-reference.md  field-reference.zh-Hant.md
docs/schema/: actress_search.schema.json  author_search.schema.json  floor_list.schema.json  genre_search.schema.json  item_list.schema.json  maker_search.schema.json  series_search.schema.json
scripts/: generate_schema.py
src/dmm/: __init__.py  client.py  types.py
src/dmm/models/: __init__.py  actress_search.py  article_search.py  base.py  floor_list.py  item_list.py
src/dmm/utils/: __init__.py  jav_code_predictor.py
