[project]
name = "dmm-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "yjlin0224", email = "yjlin0224@outlook.com" }]
requires-python = ">=3.14"
dependencies = ["msgspec>=0.20.0"]

[project.optional-dependencies]
requests = ["requests>=2.32.5"]
httpx = ["httpx>=0.28.1"]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "dmm"
